--- a/styles.css
+++ b/styles.css
@@ -95,26 +95,6 @@ nav {
     box-shadow: 0 6px 15px rgba(0, 255, 136, 0.4), inset 0 0 8px rgba(0, 255, 136, 0.5);
 }
 
-.pdb-button {
-    display: inline-block;
-    padding: 0.6rem 1.2rem;
-    background: linear-gradient(135deg, rgba(255, 61, 0, 0.8) 0%, rgba(255, 111, 97, 0.8) 100%);
-    backdrop-filter: blur(5px); /* Ефект скла */
-    color: #ffffff; /* Білий текст */
-    text-decoration: none;
-    font-weight: bold;
-    border-radius: 15px;
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    box-shadow: 0 4px 10px rgba(255, 61, 0, 0.2), inset 0 0 5px rgba(255, 61, 0, 0.3);
-    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out, background 0.3s ease-in-out;
-}
-
-.pdb-button:hover {
-    transform: scale(1.05) translateY(-2px);
-    background: linear-gradient(135deg, rgba(255, 111, 97, 0.9) 0%, rgba(255, 61, 0, 0.9) 100%);
-    box-shadow: 0 6px 15px rgba(255, 61, 0, 0.4), inset 0 0 8px rgba(255, 61, 0, 0.5);
-}
-
 .nav-icon {
     width: 35px;
     height: 35px;
@@ -202,7 +182,7 @@ section ul li strong {
 /* Inline Photos */
 .inline-photo {
     width: 100%;
-    height: auto;
+    height:  auto;
     object-fit: contain;
     border: 4px solid #00d4ff;
     border-radius: 8px;
@@ -265,7 +245,7 @@ footer {
         display: flex;
     }
 
-    .nav-button, .pdb-button {
+    .nav-button {
         width: 100%;
         text-align: center;
     }
